pythonApp-Deployment/k8s/appService.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: python-app
spec:
  selector:
    app : python-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
