pythonApp-Deployment/k8s/redisService.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: python-app
spec:
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
