pythonApp-Deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: python-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: python-app-service
              port:
                number: 8080
          path: /
